# CensoEscolarComAWS

./: .gitignore
backend/: Dockerfile  app.py  pyproject.toml  read_csv.py
frontend/src/: App.jsx
